--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 600px;
     width: 100%;
 }
 
 .register-form,
 .employee-list {
-    background-color: #fff;
+    background-color: #cec9c9;
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 30px;
@@ -45,7 +45,7 @@ input {
 button {
     width: 100%;
     padding: 12px;
-    background-color: #4CAF50;
+    background-color: #81b8cc;
     color: white;
     border: none;
     border-radius: 4px;
@@ -54,13 +54,13 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #0e93a8;
 }
 
 #responseMessage {
     text-align: center;
     margin-top: 10px;
-    color: #4CAF50;
+    color: #222c22;
 }
 
 .employee-grid {
